--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@vicons/ionicons5": "^0.12.0",
     "eslint": "^8.39.0",
+    "express": "^4.18.2",
     "pnpm": "^8.4.0",
     "vue-router": "^4.1.6"
   }
